--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,19 +2,20 @@
     
     list-style: none;
     margin-top: 30px;
-    color: darkblue;
+    color:rgb(4, 4, 47);
   
    
 }
 .buttonDelete {
     border-radius: 4px;
     cursor: pointer;
-    box-shadow: 5px 3px 3px blue;
+    box-shadow: 5px 3px 3px rgb(55, 55, 124);
 }
 
 .buttonDelete:hover,
 .buttonDelete:focus {
-    background-color: blue;
+    background-color: rgb(55, 55, 124);
+    color: white;
 }
 
 .contactItem {
