--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,12 @@
 body {
   font-family: sans-serif;
   line-height: 1.5;
-  background-color: lightgrey;
+background-color: lightgrey;
+    background-image: url('./images/phonebook.jpg');
+    background-size:cover;
+   
+
+ 
 }
 
 h1,
