--- a/src/components/AuhtMenu/AuthMenu.module.css
+++ b/src/components/AuhtMenu/AuthMenu.module.css
@@ -1,8 +1,8 @@
 .header {
-
     top: 0;
     left: 0;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     z-index: 1100;
     align-items: center;
     min-height: 44px;
@@ -10,7 +10,7 @@
     padding-left: 24px;
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: #3f51b5;
+    background-color: rgb(68, 68, 176, 0.7);
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
         0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
     border-bottom-left-radius: 8px;
@@ -48,4 +48,27 @@
 .containerNav {
     display: flex;
     justify-content: space-between;
+}
+.button {
+    width: 100px;
+    padding: 5px 5px;
+    border-radius: 4px;
+    box-shadow: 5px 3px 3px rgb(55, 55, 124);
+    margin-right: 50px;
+}
+.button:hover,
+.button:focus {
+    background-color:rgb(55, 55, 124);
+    color: white;
+}
+.listUser{
+    display: flex;
+    justify-content: baseline;
+    gap: 20px;
+}
+.userText{
+    color:rgb(4, 4, 47);
+}
+.avatar{
+border-radius: 50%;
 }
