--- a/src/components/EmptyContactList/EmptyContactList.module.css
+++ b/src/components/EmptyContactList/EmptyContactList.module.css
@@ -5,5 +5,10 @@
     display: 'flex';
     justify-content: center;
     align-items: center;
+    margin: 0 auto;
           
+}
+.text{
+    font-size: 22px;
+    color: rgb(4, 4, 47);
 }
