--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,4 @@
-.container{
+.footer{
       width: 100%;
         display: flex;
         justify-content: center;
@@ -12,10 +12,18 @@
         padding-left: 24px;
         padding-top: 12px;
         padding-bottom: 12px;
-        background-color: #3f51b5;
+        background-color: rgb(68, 68, 176, 0.7);
         box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-            0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-      
-   
+            0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12); 
         
+}
+.container{
+  display: flex;
+  justify-content: center;
+ gap: 10px;
+
+
+}
+.footerText{
+  font-size: 14px;
 }
