--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
- 
-    top: 0;
+top: 0;
     left: 0;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     z-index: 1100;
     align-items: center;
     min-height: 44px;
@@ -10,11 +10,11 @@
     padding-left: 24px;
     padding-top: 12px;
     padding-bottom: 12px;
-    background-color: #3f51b5;
+    background-color: rgb(68, 68, 176, 0.7);
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
         0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-        border-bottom-left-radius: 8px;
-        border-bottom-right-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border-bottom-right-radius: 8px;
 }
 
 .navList {
@@ -30,6 +30,7 @@ list-style: none;
     flex-wrap: nowrap;
     gap: 50px;
     list-style: none;
+    margin-right: 50px;
 }
 
 
