--- a/src/components/Pages/ContactsPage/ContactsPage.module.css
+++ b/src/components/Pages/ContactsPage/ContactsPage.module.css
@@ -1,26 +1,32 @@
 .title {
-    color: darkblue;
+    color: rgb(4, 4, 47);
     font-style: italic;
 }
 
 .contactsWrapper {
-    border: 2px solid darkblue;
+   
     padding: 20px 20px;
     border-radius: 10px;
     width: 450px;
-    margin: 0 auto;
+    margin: 0px auto;
     text-align: center;
-    background: linear-gradient(blue, 10%, pink);
-
+    background-color: rgb(203, 221, 237, 0.7);;
+    margin-bottom: 150px;
 }
 
 .phonebookWrapper {
-    border: 2px solid darkblue;
+
     padding: 20px 20px;
     border-radius: 10px;
     width: 450px;
-    margin: 0 auto;
+    margin: 50px auto;
     text-align: center;
-    margin-bottom: 50px;
-    background: linear-gradient(blue, 10%, pink);
+    margin-top: 150px;
+    background-color: rgb(203, 221, 237, 0.7);;
+}
+.phone{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    align-items: center;
 }
