--- a/src/components/Pages/HomePage/HomePage.module.css
+++ b/src/components/Pages/HomePage/HomePage.module.css
@@ -12,5 +12,7 @@
     margin: 150px auto;
     border-radius: 15px;
     color: rgb(4, 4, 47);
+   padding-left: 150px;
+   padding-right: 150px;
 
 }
