--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -31,6 +31,7 @@ list-style: none;
     gap: 50px;
     list-style: none;
     margin-right: 50px;
+    margin-top: 10px;
 }
 
 
@@ -48,4 +49,7 @@ list-style: none;
 .containerNav{
     display: flex;
     justify-content: space-between;
+}
+.heroText{
+    font-size: 36px;
 }
